src/flutter_recorder.h

FFI_PLUGIN_EXPORT void
flutter_recorder_getFilterParamNames(enum RecorderFilterType filterType,
                                     char **names, int *paramsCount);
FFI_PLUGIN_EXPORT void
flutter_recorder_setFilterParams(enum RecorderFilterType filterType,
                                 int attributeId, float value);
FFI_PLUGIN_EXPORT float
flutter_recorder_getFilterParams(enum RecorderFilterType filterType,
                                 int attributeId);
// Filter lock stats (for debug overlay)
FFI_PLUGIN_EXPORT uint64_t flutter_recorder_getFilterMissCount();
FFI_PLUGIN_EXPORT uint64_t flutter_recorder_getFilterProcessCount();
FFI_PLUGIN_EXPORT void flutter_recorder_resetFilterStats();
/////////////////////////
/// AEC (Acoustic Echo Cancellation)
/////////////////////////
FFI_PLUGIN_EXPORT void *
flutter_recorder_aec_createReferenceBuffer(unsigned int sampleRate,
                                           unsigned int channels);
FFI_PLUGIN_EXPORT void flutter_recorder_aec_destroyReferenceBuffer();
FFI_PLUGIN_EXPORT void *flutter_recorder_aec_getOutputCallback();
FFI_PLUGIN_EXPORT void flutter_recorder_aec_resetBuffer();
// AEC Enable/Disable (controls reference buffer writes)
FFI_PLUGIN_EXPORT void flutter_recorder_aec_setEnabled(bool enabled);
FFI_PLUGIN_EXPORT bool flutter_recorder_aec_isEnabled();
// AEC Mode Control (A/B Testing)
FFI_PLUGIN_EXPORT void flutter_recorder_aec_setMode(int mode);
FFI_PLUGIN_EXPORT int flutter_recorder_aec_getMode();
/////////////////////////
/// Neural Model Control
/////////////////////////
// Load neural model by type
// modelType: 0=NONE, 1=AEC_MASK_V3
// assetBasePath: Platform-specific path to assets directory
// Returns: 1 if successful, 0 if failed
FFI_PLUGIN_EXPORT int flutter_recorder_neural_loadModel(int modelType,
                                                        const char *assetBasePath);
// Get currently loaded neural model type
// Returns: 0=NONE, 1=AEC_MASK_V3
FFI_PLUGIN_EXPORT int flutter_recorder_neural_getLoadedModel();
// Enable/disable neural post-filter
FFI_PLUGIN_EXPORT void flutter_recorder_neural_setEnabled(int enabled);
// Check if neural post-filter is enabled
FFI_PLUGIN_EXPORT int flutter_recorder_neural_isEnabled();
/////////////////////////
/// AEC Calibration
/////////////////////////

// Calibration signal types
// 0 = Chirp (log sweep), 1 = Click (impulse train)
FFI_PLUGIN_EXPORT uint8_t *flutter_recorder_aec_generateCalibrationSignal(
    unsigned int sampleRate, unsigned int channels, size_t *outSize,
    int signalType);
FFI_PLUGIN_EXPORT void
flutter_recorder_aec_startCalibrationCapture(size_t maxSamples);
FFI_PLUGIN_EXPORT void flutter_recorder_aec_stopCalibrationCapture();
FFI_PLUGIN_EXPORT void flutter_recorder_aec_captureForAnalysis();
FFI_PLUGIN_EXPORT int flutter_recorder_aec_runCalibrationAnalysis(
    unsigned int sampleRate, float *outDelayMs, float *outEchoGain,
    float *outCorrelation);