lib/src/bindings/flutter_recorder_bindings_generated.dart


  void flutter_recorder_getFilterParamNames(
    RecorderFilterType filterType,
    ffi.Pointer<ffi.Pointer<ffi.Char>> names,
    ffi.Pointer<ffi.Int> paramsCount,
  ) {
    return _flutter_recorder_getFilterParamNames(
      filterType.value,
      names,
      paramsCount,
    );
  }

  late final _flutter_recorder_getFilterParamNamesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.UnsignedInt, ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Int>)>>('flutter_recorder_getFilterParamNames');
  late final _flutter_recorder_getFilterParamNames =
      _flutter_recorder_getFilterParamNamesPtr.asFunction<
          void Function(
              int, ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Int>)>();

  void flutter_recorder_setFilterParams(
    RecorderFilterType filterType,
    int attributeId,
    double value,
  ) {
    return _flutter_recorder_setFilterParams(
      filterType.value,
      attributeId,
      value,
    );
  }

  late final _flutter_recorder_setFilterParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.UnsignedInt, ffi.Int,
              ffi.Float)>>('flutter_recorder_setFilterParams');
  late final _flutter_recorder_setFilterParams =
      _flutter_recorder_setFilterParamsPtr
          .asFunction<void Function(int, int, double)>();

  double flutter_recorder_getFilterParams(
    RecorderFilterType filterType,
    int attributeId,
  ) {
    return _flutter_recorder_getFilterParams(
      filterType.value,
      attributeId,
    );
  }

  late final _flutter_recorder_getFilterParamsPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.UnsignedInt, ffi.Int)>>(
          'flutter_recorder_getFilterParams');
  late final _flutter_recorder_getFilterParams =
      _flutter_recorder_getFilterParamsPtr
          .asFunction<double Function(int, int)>();

  /// Filter lock stats (for debug overlay)
  int flutter_recorder_getFilterMissCount() {
    return _flutter_recorder_getFilterMissCount();
  }

  late final _flutter_recorder_getFilterMissCountPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function()>>(
          'flutter_recorder_getFilterMissCount');
  late final _flutter_recorder_getFilterMissCount =
      _flutter_recorder_getFilterMissCountPtr.asFunction<int Function()>();

  int flutter_recorder_getFilterProcessCount() {
    return _flutter_recorder_getFilterProcessCount();
  }

  late final _flutter_recorder_getFilterProcessCountPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function()>>(
          'flutter_recorder_getFilterProcessCount');
  late final _flutter_recorder_getFilterProcessCount =
      _flutter_recorder_getFilterProcessCountPtr.asFunction<int Function()>();

  void flutter_recorder_resetFilterStats() {
    return _flutter_recorder_resetFilterStats();
  }

  late final _flutter_recorder_resetFilterStatsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_resetFilterStats');
  late final _flutter_recorder_resetFilterStats =
      _flutter_recorder_resetFilterStatsPtr.asFunction<void Function()>();

  /// //////////////////////
  /// AEC (Acoustic Echo Cancellation)
  /// //////////////////////
  ffi.Pointer<ffi.Void> flutter_recorder_aec_createReferenceBuffer(
    int sampleRate,
    int channels,
  ) {
    return _flutter_recorder_aec_createReferenceBuffer(
      sampleRate,
      channels,
    );
  }

  late final _flutter_recorder_aec_createReferenceBufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.UnsignedInt,
              ffi.UnsignedInt)>>('flutter_recorder_aec_createReferenceBuffer');
  late final _flutter_recorder_aec_createReferenceBuffer =
      _flutter_recorder_aec_createReferenceBufferPtr
          .asFunction<ffi.Pointer<ffi.Void> Function(int, int)>();

  void flutter_recorder_aec_destroyReferenceBuffer() {
    return _flutter_recorder_aec_destroyReferenceBuffer();
  }

  late final _flutter_recorder_aec_destroyReferenceBufferPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_aec_destroyReferenceBuffer');
  late final _flutter_recorder_aec_destroyReferenceBuffer =
      _flutter_recorder_aec_destroyReferenceBufferPtr
          .asFunction<void Function()>();

  ffi.Pointer<ffi.Void> flutter_recorder_aec_getOutputCallback() {
    return _flutter_recorder_aec_getOutputCallback();
  }

  late final _flutter_recorder_aec_getOutputCallbackPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function()>>(
          'flutter_recorder_aec_getOutputCallback');
  late final _flutter_recorder_aec_getOutputCallback =
      _flutter_recorder_aec_getOutputCallbackPtr
          .asFunction<ffi.Pointer<ffi.Void> Function()>();

  void flutter_recorder_aec_resetBuffer() {
    return _flutter_recorder_aec_resetBuffer();
  }

  late final _flutter_recorder_aec_resetBufferPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_aec_resetBuffer');
  late final _flutter_recorder_aec_resetBuffer =
      _flutter_recorder_aec_resetBufferPtr.asFunction<void Function()>();

  /// AEC Enable/Disable (controls reference buffer writes)
  void flutter_recorder_aec_setEnabled(
    bool enabled,
  ) {
    return _flutter_recorder_aec_setEnabled(
      enabled,
    );
  }

  late final _flutter_recorder_aec_setEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
          'flutter_recorder_aec_setEnabled');
  late final _flutter_recorder_aec_setEnabled =
      _flutter_recorder_aec_setEnabledPtr.asFunction<void Function(bool)>();

  bool flutter_recorder_aec_isEnabled() {
    return _flutter_recorder_aec_isEnabled();
  }

  late final _flutter_recorder_aec_isEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
          'flutter_recorder_aec_isEnabled');
  late final _flutter_recorder_aec_isEnabled =
      _flutter_recorder_aec_isEnabledPtr.asFunction<bool Function()>();

  /// AEC Mode Control (A/B Testing)
  void flutter_recorder_aec_setMode(
    int mode,
  ) {
    return _flutter_recorder_aec_setMode(
      mode,
    );
  }

  late final _flutter_recorder_aec_setModePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
          'flutter_recorder_aec_setMode');
  late final _flutter_recorder_aec_setMode =
      _flutter_recorder_aec_setModePtr.asFunction<void Function(int)>();

  int flutter_recorder_aec_getMode() {
    return _flutter_recorder_aec_getMode();
  }

  late final _flutter_recorder_aec_getModePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'flutter_recorder_aec_getMode');
  late final _flutter_recorder_aec_getMode =
      _flutter_recorder_aec_getModePtr.asFunction<int Function()>();

  /// //////////////////////
  /// Neural Model Control
  /// //////////////////////
  /// Load neural model by type
  /// modelType: 0=NONE, 1=AEC_MASK_V3
  /// assetBasePath: Platform-specific path to assets directory
  /// Returns: 1 if successful, 0 if failed
  int flutter_recorder_neural_loadModel(
    int modelType,
    ffi.Pointer<ffi.Char> assetBasePath,
  ) {
    return _flutter_recorder_neural_loadModel(
      modelType,
      assetBasePath,
    );
  }

  late final _flutter_recorder_neural_loadModelPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>)>>(
      'flutter_recorder_neural_loadModel');
  late final _flutter_recorder_neural_loadModel =
      _flutter_recorder_neural_loadModelPtr
          .asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  /// Get currently loaded neural model type
  /// Returns: 0=NONE, 1=AEC_MASK_V3
  int flutter_recorder_neural_getLoadedModel() {
    return _flutter_recorder_neural_getLoadedModel();
  }

  late final _flutter_recorder_neural_getLoadedModelPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'flutter_recorder_neural_getLoadedModel');
  late final _flutter_recorder_neural_getLoadedModel =
      _flutter_recorder_neural_getLoadedModelPtr.asFunction<int Function()>();

  /// Enable/disable neural post-filter
  void flutter_recorder_neural_setEnabled(
    int enabled,
  ) {
    return _flutter_recorder_neural_setEnabled(
      enabled,
    );
  }

  late final _flutter_recorder_neural_setEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
          'flutter_recorder_neural_setEnabled');
  late final _flutter_recorder_neural_setEnabled =
      _flutter_recorder_neural_setEnabledPtr.asFunction<void Function(int)>();

  /// Check if neural post-filter is enabled
  int flutter_recorder_neural_isEnabled() {
    return _flutter_recorder_neural_isEnabled();
  }

  late final _flutter_recorder_neural_isEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'flutter_recorder_neural_isEnabled');
  late final _flutter_recorder_neural_isEnabled =
      _flutter_recorder_neural_isEnabledPtr.asFunction<int Function()>();

  /// Calibration signal types
  /// 0 = Chirp (log sweep), 1 = Click (impulse train)
  ffi.Pointer<ffi.Uint8> flutter_recorder_aec_generateCalibrationSignal(
    int sampleRate,
    int channels,
    ffi.Pointer<ffi.Size> outSize,
    int signalType,
  ) {
    return _flutter_recorder_aec_generateCalibrationSignal(
      sampleRate,
      channels,
      outSize,
      signalType,
    );
  }

  late final _flutter_recorder_aec_generateCalibrationSignalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(
              ffi.UnsignedInt,
              ffi.UnsignedInt,
              ffi.Pointer<ffi.Size>,
              ffi.Int)>>('flutter_recorder_aec_generateCalibrationSignal');
  late final _flutter_recorder_aec_generateCalibrationSignal =
      _flutter_recorder_aec_generateCalibrationSignalPtr.asFunction<
          ffi.Pointer<ffi.Uint8> Function(
              int, int, ffi.Pointer<ffi.Size>, int)>();

  void flutter_recorder_aec_startCalibrationCapture(
    int maxSamples,
  ) {
    return _flutter_recorder_aec_startCalibrationCapture(
      maxSamples,
    );
  }

  late final _flutter_recorder_aec_startCalibrationCapturePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Size)>>(
          'flutter_recorder_aec_startCalibrationCapture');
  late final _flutter_recorder_aec_startCalibrationCapture =
      _flutter_recorder_aec_startCalibrationCapturePtr
          .asFunction<void Function(int)>();

  void flutter_recorder_aec_stopCalibrationCapture() {
    return _flutter_recorder_aec_stopCalibrationCapture();
  }

  late final _flutter_recorder_aec_stopCalibrationCapturePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_aec_stopCalibrationCapture');
  late final _flutter_recorder_aec_stopCalibrationCapture =
      _flutter_recorder_aec_stopCalibrationCapturePtr
          .asFunction<void Function()>();

  void flutter_recorder_aec_captureForAnalysis() {
    return _flutter_recorder_aec_captureForAnalysis();
  }

  late final _flutter_recorder_aec_captureForAnalysisPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_aec_captureForAnalysis');
  late final _flutter_recorder_aec_captureForAnalysis =
      _flutter_recorder_aec_captureForAnalysisPtr.asFunction<void Function()>();

  int flutter_recorder_aec_runCalibrationAnalysis(
    int sampleRate,
    ffi.Pointer<ffi.Float> outDelayMs,
    ffi.Pointer<ffi.Float> outEchoGain,
    ffi.Pointer<ffi.Float> outCorrelation,
  ) {
    return _flutter_recorder_aec_runCalibrationAnalysis(
      sampleRate,
      outDelayMs,
      outEchoGain,
      outCorrelation,
    );
  }
